fix: gemini API 수정 #121